@@ -54,6 +54,9 @@
 
     <properties>
         <sling.java.version>8</sling.java.version>
+        <!-- There is significant difference between the locale data provided in JDK8 and starting with JDK9. In order to achieve
+        compatibility between newer versions of the JDK and JDK8, we use COMPAT as the default locale data provider for tests. -->
+        <java.locale.providers>COMPAT,JRE,SPI</java.locale.providers>
     </properties>
 
     <!-- ======================================================================= -->
@@ -63,11 +66,9 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <argLine>-Djava.locale.providers=${java.locale.providers}</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -306,18 +307,22 @@
             <version>2.5.0</version>
             <scope>test</scope>
         </dependency>
-
-        <!-- benchmark -->
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-core</artifactId>
-            <version>1.32</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-generator-annprocess</artifactId>
-            <version>1.32</version>
-        </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>jacoco-report</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>@{argLine} -Djava.locale.providers=${java.locale.providers}</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
